# NDT_Point_Jacobian_Hessian

./: AngleDerivatives.cpp  CMakeLists.txt  PointDerivatives.cpp  PointDerivatives.hpp  output.txt
ndt_test1/: CMakeLists.txt  ndt_sample.py
ndt_test1/src/: ndt_sample.cpp
